vcluster_versioned_docs/version-0.32.0/configure/vcluster-yaml/networking/replicate-services.mdx
---
title: Replicate networking services
sidebar_label: replicateServices
sidebar_position: 1
sidebar_class_name: host-nodes
---

import ReplicateServices from '../../../_partials/config/networking/replicateServices.mdx'
import TenancySupport from '../../../_fragments/tenancy-support.mdx';

<TenancySupport hostNodes="true" />

With open source vCluster, you need to replicate services between the host cluster and virtual cluster.

## Host cluster to virtual cluster

In this example, you map a service `my-host-service` in the namespace `my-host-namespace` to the virtual cluster service `my-virtual-service` in the virtual cluster namespace `my-virtual-namespace`.

```yaml
networking:
  replicateServices:
    fromHost:
    - from: my-host-namespace/my-host-service
      to: my-virtual-namespace/my-virtual-service
```

vCluster replicates the service in the virtual cluster, with the virtual cluster service pointing to the service running in the host cluster. Pods inside the virtual cluster can access the host service using `my-virtual-service.my-virtual-namespace` syntax. For example, if you use cURL, the command is `curl http://my-virtual-service.my-virtual-namespace`.

In the above example, when you remove the `my-host-namespace/my-host-service` service replication config from `networking.replicateServices.fromHost`,
the virtual cluster service `my-virtual-namespace/my-virtual-service` is automatically deleted from the virtual cluster.

## Virtual cluster to host cluster

You can also map a virtual cluster service to a host cluster service. This is especially useful if you want to expose an application that runs inside the virtual cluster to other workloads running in the host cluster, which makes it easier to share services across vCluster instances.

In this example, you map the virtual service `my-virtual-service` in the namespace `my-virtual-namespace` to the host namespace service `my-host-service`

```yaml
networking:
  replicateServices:
    toHost:
    - from: my-virtual-namespace/my-virtual-service
      to: my-host-service
```

With this configuration, vCluster manages a service called `my-host-service` inside the namespace where the vCluster workloads are synced, which points to the virtual service `my-virtual-service` in namespace `my-virtual-namespace` inside the virtual cluster. Pods in the host cluster are able to access the virtual service by calling the host service. If you use cURL, the command based on the preceding example is `curl http://my-host-service`.

In the above example, when you remove the `my-virtual-namespace/my-virtual-service` service replication config from
`networking.replicateServices.toHost`, the host cluster service `my-host-service` is not automatically deleted from
the host cluster, so you need to delete it manually, if you don't want to keep it in the host cluster.

## Network policies

If you are using [network policies](../policies/network-policy.mdx), traffic to or from the replicated services must be allowed.

```yaml title="vcluster.yaml"
policies:
  networkPolicy:
    workload:
      egress:
      - to:
        # Example allowing vcluster workload traffic to all pods in the my-host-namespace namespace.
        # Depending on your use case, a more restrictive pod selector may be used.
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-host-namespace

      ingress:
      - from:
        # Example allowing vcluster workload traffic from all pods in the my-host-namespace namespace.
        # Depending on your use case, a more restrictive pod selector may be used.
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-host-namespace

```

## Config reference

<ReplicateServices/>
